--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,4 +4,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico">
 </head>
