--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<!-- Footer -->
+<!-- Footer-->
 <footer style="text-align: center">
-    <ul style="display:inline-block;margin-top:1em;margin-left:-1.5em;margin-bottom:1em;overflow:hidden;list-style-type:none;">
+    <!--<ul style="display:inline-block;margin-top:1em;margin-left:-1.5em;margin-bottom:1em;overflow:hidden;list-style-type:none;">
         <li style="float:left;">
             <a href="{{ " /feed.xml " | prepend: site.baseurl }}">
                 <span class="icon fa-rss alt">
@@ -19,7 +19,7 @@
             </a>
         </li>
         {% endif %}
-    </ul>
+    </ul>-->
     <p class="copyright" style="margin-bottom:2em">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}</p>
 </footer>
 <!-- Scripts -->
