Fix wrapping logos and new SBRG logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
         </li>
         {% endif %}
     </ul>-->
-    <p class="copyright" style="margin-bottom:2em">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}</p>
+    <p class="copyright" style="margin-bottom:4em; margin-top: 6em;">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}</p>
 </footer>
 <!-- Scripts -->
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
