--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,10 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+
         </div>
+
+        <div class="navbar-brand navbar-right">COnstraint-based Reconstruction and Analysis</div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
