--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2598,6 +2598,7 @@ dl dt {
 section.special,
 article.special {
     text-align: center;
+    margin-bottom: 1.25em;
 }
 
 header.major {
@@ -2771,7 +2772,7 @@ table.alt tbody tr td {
     -ms-justify-content: center;
     justify-content: center;
     width: calc(100% + 2em);
-    margin: 0 0 3em -2em;
+    margin: 0 0 -4em -2em;
     padding: 0;
     list-style: none;
 }
@@ -2780,6 +2781,7 @@ table.alt tbody tr td {
     width: calc(33.33333% - 2em);
     margin-left: 2em;
     margin-top: 3em;
+    margin-bottom: 1.25em;
     padding: 0;
 }
 
@@ -3163,14 +3165,14 @@ body.is-loading #header.alt .logo {
 .navbar-custom .navbar-brand{font-weight:800;}
 .navbar-custom .nav li a{text-transform:uppercase;font-size:18px;font-weight:800;}
 @media only screen and (min-width:768px){.navbar-custom{background:rgba(51, 51, 51, 1);border-bottom:1px solid transparent;}
-.navbar-custom .navbar-brand{color:white;padding:15px;}
+.navbar-custom .navbar-brand{color:rgba(255, 255, 255, 1);padding:15px;}
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus{color:rgba(255, 255, 255, 1);}
-.navbar-custom .nav li a{color:white;padding:15px;}
+.navbar-custom .nav li a{color:rgba(255, 255, 255, 1);padding:15px;}
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus{color:rgba(255, 255, 255, 1);}
 }
-@media only screen and (min-width:1170px){.navbar-custom{-webkit-transition:background-color 0.3s;-moz-transition:background-color 0.3s;transition:background-color 0.3s;-webkit-transform:translate3d(0, 0, 0);-moz-transform:translate3d(0, 0, 0);-ms-transform:translate3d(0, 0, 0);-o-transform:translate3d(0, 0, 0); transform:translate3d(0, 0, 0);-webkit-backface-visibility:hidden;backface-visibility:hidden;}
+@media only screen and (min-width:768px){.navbar-custom{  webkit-transition:background-color 0.3s;-moz-transition:background-color 0.3s;transition:background-color 0.3s;-webkit-transform:translate3d(0, 0, 0);-moz-transform:translate3d(0, 0, 0);-ms-transform:translate3d(0, 0, 0);-o-transform:translate3d(0, 0, 0); transform:translate3d(0, 0, 0);-webkit-backface-visibility:hidden;backface-visibility:hidden;}
 .navbar-custom.is-fixed{position:fixed;top:-61px;background-color:rgba(51, 51, 51, 1);border-bottom:1px solid transparent;-webkit-transition:-webkit-transform 0.3s;-moz-transition:-moz-transform 0.3s;transition:transform 0.3s;}
 .navbar-custom.is-fixed .navbar-brand{color:rgba(255, 255, 255, 1);}
 .navbar-custom.is-fixed .navbar-brand:hover,
@@ -3180,6 +3182,14 @@ body.is-loading #header.alt .logo {
 .navbar-custom.is-fixed .nav li a:focus{color:rgba(255, 255, 255, 1);}
 .navbar-custom.is-visible{-webkit-transform:translate3d(0, 100%, 0);-moz-transform:translate3d(0, 100%, 0);-ms-transform:translate3d(0, 100%, 0);-o-transform:translate3d(0, 100%, 0);transform:translate3d(0, 100%, 0);}
 }
+
+.navbar-collapse {
+    visibility: hidden;
+}
+.navbar-toggle {
+      visibility: hidden;
+}
+@media only screen and (max-width:768px){.navbar-custom{visibility: hidden;}}
 
 /* Main */
 
