--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
 
         </div>
 
-        <div class="navbar-brand navbar-right">COnstraint-based Reconstruction and Analysis</div>
+        <div class="navbar-brand navbar-right">COnstraint-Based Reconstruction and Analysis</div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
